# owasp-secguard

./: .gitignore  .pre-commit-hooks.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: detection_bench.py
benchmarks/results/: detection.json
src/secguard/: __init__.py  cli.py  corpus.py  detectors.py  middleware.py  scanner.py
tests/: test_corpus.py  test_detectors.py  test_middleware.py  test_scanner.py
