[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owasp-secguard"
version = "0.1.0"
description = "OWASP injection-detection middleware for FastAPI + a secrets scanner. Hero: 100% recall on a labeled injection corpus at 0% false positives on benign traffic."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tajaddin Gafarov", email = "gafarovtajaddin@gmail.com" }]
keywords = ["security", "owasp", "fastapi", "middleware", "secrets-scanner", "appsec", "injection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "starlette>=0.40.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
]

[project.scripts]
secguard-scan = "secguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["*/cli.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
